--- a/public/css/student/academics.css
+++ b/public/css/student/academics.css
@@ -1,6 +1,6 @@
 .notifs {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: auto auto;
     width: 100%;
     flex-wrap: wrap;
     padding: 10px;
