--- a/public/css/subjectTeacher/assignments.css
+++ b/public/css/subjectTeacher/assignments.css
@@ -386,3 +386,35 @@
     margin: 10px 0;
     border-radius: 15px;
 }
+
+.assig-box .add-assignment-score {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    margin: 10px 0;
+}
+
+.add-assignment-score .add-assig-score-form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: 1px solid var(--dark-2);
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.add-assig-score-form input[type=number] {
+    padding: 10px;
+    border: none;
+    outline: none;
+    background-color: var(--light-2);
+    flex: 1;
+}
+
+.add-assig-score-form button[type=submit] {
+    padding: 10px;
+    background-color: var(--dark-2);
+    color: var(--light-2);
+    border: none;
+    outline: none;
+}
