--- a/public/css/variable.css
+++ b/public/css/variable.css
@@ -59,10 +59,10 @@
     --pastel-lavender: #EAD7F7;
 
     /* 🧊 Glass Vibes */
-    --glass-white-1: rgba(255, 255, 255, 0.25);
-    --glass-white-2: rgba(255, 255, 255, 0.15);
-    --glass-black-1: rgba(0, 0, 0, 0.25);
-    --glass-black-2: rgba(0, 0, 0, 0.15);
+    --glass-white-1: #ffffff40;
+    --glass-white-2: #ffffff26;
+    --glass-black-1: #00000040;
+    --glass-black-2: #00000026;
 
     /* ⚫ Neutral Army */
     --neutral-1: #F8F9FA;
